--- a/less/navigation.less
+++ b/less/navigation.less
@@ -29,7 +29,7 @@
                 margin: 12px auto;
 
                 @media @phone {
-                    padding: 19px 6% 10px 9%;
+                    // padding: 19px 6% 10px 9%;
                  }
 
                 a {
